# ir-team-retreat

./: .gitignore  pyproject.toml  requirements.txt  run.py
configs/: config.yaml
notebooks/: Pipeline Introduction.ipynb  exploratory.ipynb  io_utils.ipynb  pell_accepts.ipynb
src/ir_pell_accepts/: checks.py  clean.py  headcount_calcs.py  helper.py  io_utils.py  output.py  paths.py
src/ir_pell_accepts.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
