[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ir_pell_accepts"
version = "0.2.0"
description = "0.1.0 excluded enrolled students in the fall term that were not found in the cohort/retention file. 0.2.0 fixes this by explicitly including the missing-cohort students into the non-incoming fall enrollment bins"

[tool.setuptools.packages.find]
where = ["src"]
